MDEV-17253 Oracle compatibility: The REVERSE key word for FOR loop behaves incorrectly